--- a/package.json
+++ b/package.json
@@ -14,16 +14,16 @@
     "build:cdn": "webpack --env.NODE_ENV=production --progress"
   },
   "dependencies": {
+    "vue": "^2.6.11"
+  },
+  "devDependencies": {
     "css-loader": "^3.5.3",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
-    "vue": "^2.6.11",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
     "webpack-userscript": "^2.5.3"
-  },
-  "devDependencies": {
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11"
   }
 }
