--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nalomu-local-txt-reader",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "在本地浏览器阅读TXT小说吧！",
   "main": "index.js",
   "author": "Nalomu",
@@ -8,19 +8,33 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --open --env.NODE_ENV=development",
+    "dev:local": "webpack --env.NODE_ENV=development --env.local --progress",
     "start:local": "webpack-dev-server --open --env.NODE_ENV=development --env.local",
     "build:local": "webpack --env.NODE_ENV=production --env.local --progress",
+    "dev:cdn": "webpack --env.NODE_ENV=development --progress",
+    "start:cdn": "webpack-dev-server --open --env.NODE_ENV=development",
     "build:cdn": "webpack --env.NODE_ENV=production --progress"
   },
   "dependencies": {
     "vue": "^2.6.11"
   },
   "devDependencies": {
+    "babel-polyfill": "^6.26.0",
+    "@babel/core": "^7.9.6",
+    "@babel/preset-env": "^7.9.6",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-component": "^1.1.1",
+    "babel-preset-env": "^1.7.0",
     "css-loader": "^3.5.3",
+    "file-loader": "^6.0.0",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.2",
+    "vue-loader": "^15.9.2",
+    "vue-material": "^1.0.0-beta-13",
+    "vue-template-compiler": "^2.6.11",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.11.0",
